--- a/index.html
+++ b/index.html
@@ -14,95 +14,20 @@
         <h1>Love Life</h1>
     </header>
     <main>
-        <div class="thought-container">
-            <div class="thought">
-                <h2>Date: [Date Goes Here]</h2>
-                <p>
-                   [Your thought here.  
-                </p>
-            </div>
-
-            <!-- Example of another thought -->
-             <div class="thought">
-               <h2>Date: [Date Goes Here]</h2>
-               <p>
-                   [Your thought here.  
-               </p>
-            </div>
-            <!-- More thoughts can go here in the same format -->
+        <div class="input-container">
+            <input type="date" id="thoughtDate" placeholder="Date">
+            <textarea id="thoughtText" placeholder="Your thought here..."></textarea>
+            <button id="addThoughtBtn">Add Thought</button>
         </div>
-        <div class="thought-container">
-            <div class="thought">
-                <h2>Date: [Date Goes Here]</h2>
-                <p>
-                   [Your thought here.  
-                </p>
-            </div>
 
-            <!-- Example of another thought -->
-             <div class="thought">
-               <h2>Date: [Date Goes Here]</h2>
-               <p>
-                   [Your thought here.  
-               </p>
-            </div>
-            <!-- More thoughts can go here in the same format -->
-        </div>
-        <div class="thought-container">
-            <div class="thought">
-                <h2>Date: [Date Goes Here]</h2>
-                <p>
-                   [Your thought here.  
-                </p>
-            </div>
-
-            <!-- Example of another thought -->
-             <div class="thought">
-               <h2>Date: [Date Goes Here]</h2>
-               <p>
-                   [Your thought here.  
-               </p>
-            </div>
-            <!-- More thoughts can go here in the same format -->
-        </div> 
-        <div class="thought-container">
-            <div class="thought">
-                <h2>Date: [Date Goes Here]</h2>
-                <p>
-                   [Your thought here.  
-                </p>
-            </div>
-
-            <!-- Example of another thought -->
-             <div class="thought">
-               <h2>Date: [Date Goes Here]</h2>
-               <p>
-                   [Your thought here.  
-               </p>
-            </div>
-            <!-- More thoughts can go here in the same format -->
-        </div>
-        <div class="thought-container">
-            <div class="thought">
-                <h2>Date: [Date Goes Here]</h2>
-                <p>
-                   [Your thought here.  
-                </p>
-            </div>
-
-            <!-- Example of another thought -->
-             <div class="thought">
-               <h2>Date: [Date Goes Here]</h2>
-               <p>
-                   [Your thought here.  
-               </p>
-            </div>
-            <!-- More thoughts can go here in the same format -->
+        <div id="thoughts-grid" class="thoughts-grid">
+            <!-- Thoughts will be dynamically added here by JavaScript -->
         </div>
     </main>
 
     <footer>
         <p>© 2025 It's Prasant. All rights reserved.</p>
     </footer>
+    <script src="script.js"></script>
 </body>
 </html>
