--- a/index.html
+++ b/index.html
@@ -10,33 +10,39 @@
     <link href="https://fonts.googleapis.com/css2?family=Playwrite+IN:wght@100..400&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Playfair+Display:ital,wght@0,400..900;1,400..900&family=Open+Sans:wght@300;400;600;700&display=swap" rel="stylesheet">
 
-    <!-- Firebase SDK -->
-    <script src="https://www.gstatic.com/firebasejs/10.7.1/firebase-app.js"></script>
-    <script src="https://www.gstatic.com/firebasejs/10.7.1/firebase-firestore.js"></script>
-
     <script type="module">
-        // Import the functions you need from the SDKs you need
+        // Import Firebase modules (Modular Imports - CORRECTED and ADDED Firestore)
         import { initializeApp } from "https://www.gstatic.com/firebasejs/11.3.0/firebase-app.js";
-        import { getAnalytics } from "https://www.gstatic.com/firebasejs/11.3.0/firebase-analytics.js";
-        // TODO: Add SDKs for Firebase products that you want to use
-        // https://firebase.google.com/docs/web/setup#available-libraries
-      
+        import { getFirestore } from "https://www.gstatic.com/firebasejs/11.3.0/firebase-firestore.js"; // Import getFirestore
+        // import { getAnalytics } from "https://www.gstatic.com/firebasejs/11.3.0/firebase-analytics.js"; // Analytics is optional - comment out for now
+
         // Your web app's Firebase configuration
-        // For Firebase JS SDK v7.20.0 and later, measurementId is optional
         const firebaseConfig = {
-          apiKey: "AIzaSyCWqNLKKIjvwvGInLq1KB-0BhT7ccQjacw",
-          authDomain: "mythoughtswebapp.firebaseapp.com",
-          projectId: "mythoughtswebapp",
-          storageBucket: "mythoughtswebapp.firebasestorage.app",
-          messagingSenderId: "379317353492",
-          appId: "1:379317353492:web:fa256c190c86b5dad27b01",
-          measurementId: "G-7CLRK9X9QY"
+          apiKey: "AIzaSyCWqNLKKIjvwvGInLq1KB-0BhT7ccQjacw", // ***DOUBLE-CHECK THESE VALUES AGAINST YOUR FIREBASE CONSOLE***
+          authDomain: "mythoughtswebapp.firebaseapp.com", // ***DOUBLE-CHECK THESE VALUES AGAINST YOUR FIREBASE CONSOLE***
+          projectId: "mythoughtswebapp",           // ***DOUBLE-CHECK THESE VALUES AGAINST YOUR FIREBASE CONSOLE***
+          storageBucket: "mythoughtswebapp.firebasestorage.app", // ***DOUBLE-CHECK THESE VALUES AGAINST YOUR FIREBASE CONSOLE***
+          messagingSenderId: "379317353492",         // ***DOUBLE-CHECK THESE VALUES AGAINST YOUR FIREBASE CONSOLE***
+          appId: "1:379317353492:web:fa256c190c86b5dad27b01", // ***DOUBLE-CHECK THESE VALUES AGAINST YOUR FIREBASE CONSOLE***
+          measurementId: "G-7CLRK9X9QY"          // ***DOUBLE-CHECK THESE VALUES AGAINST YOUR FIREBASE CONSOLE***
         };
-      
-        // Initialize Firebase
+
+        // Initialize Firebase App
         const app = initializeApp(firebaseConfig);
-        const analytics = getAnalytics(app);
-      </script>
+
+        // Initialize Firestore Database
+        const db = getFirestore(app); // Initialize Firestore using getFirestore and the initialized app
+
+        // const analytics = getAnalytics(app); // Analytics is optional - comment out for now
+
+        // Now 'db' is your Firestore database object that you can use in script.js
+        // You do NOT need to initialize Firebase or Firestore again in script.js
+    </script>
+
+    <!-- REMOVE THESE GLOBAL SCRIPT TAGS - WE ARE USING MODULAR IMPORTS NOW -->
+    <!-- <script src="https://www.gstatic.com/firebasejs/10.7.1/firebase-app.js"></script> -->
+    <!-- <script src="https://www.gstatic.com/firebasejs/10.7.1/firebase-firestore.js"></script> -->
+
 
 </head>
 <body>
@@ -58,6 +64,6 @@
     <footer>
         <p>© 2025 It's Prasant. All rights reserved.</p>
     </footer>
-    <script src="script.js"></script>
+    <script src="script.js" type="module"></script>  <!-- IMPORTANT: Add type="module" to your script.js link as well -->
 </body>
 </html>
